--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+upload_speed = 921600
 lib_deps = 
 	arduinogetstarted/ezButton@^1.0.4
 	adafruit/Adafruit GFX Library@^1.11.9
