Added incomplete Rest and Server, as well as a new Database implementation

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,5 @@ lib_deps =
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	siara-cc/Sqlite3Esp32@^2.4
 	robtillaart/TM1637_RT@^0.3.9
+	ESP Async WebServer
+	ArduinoJson
