--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,12 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+board_build.filesystem = littlefs
 lib_deps = 
 	arduinogetstarted/ezButton@^1.0.4
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/Adafruit SSD1306@^2.5.9
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	siara-cc/Sqlite3Esp32@^2.4
-	robtillaart/TM1637_RT@^0.3.9
 	ESP Async WebServer
 	ArduinoJson
