--- a/website/.eslintignore
+++ b/website/.eslintignore
@@ -3,10 +3,11 @@ node_modules
 /build
 /.svelte-kit
 /package
-.env.production
+.env
 .env.*
 !.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
-.idea
+
+# Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
+package-lock.json
+yarn.lock
