--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,12 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 board_build.filesystem = littlefs
+build_flags = -Os
 lib_deps = 
 	arduinogetstarted/ezButton@^1.0.4
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/Adafruit SSD1306@^2.5.9
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	siara-cc/Sqlite3Esp32@^2.4
-	ESP Async WebServer
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	ArduinoJson
