--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 board_build.filesystem = littlefs
+board_build.partitions = partitions.csv
 build_flags = -Os
 lib_deps = 
 	arduinogetstarted/ezButton@^1.0.4
