--- a/website/package.json
+++ b/website/package.json
@@ -39,6 +39,7 @@
 		"lucide-svelte": "^0.376.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
+		"write-excel-file": "^2.0.1",
 		"ws": "^8.17.0"
 	}
 }
