--- a/platformio.ini
+++ b/platformio.ini
@@ -17,11 +17,12 @@ upload_speed = 921600
 board_build.filesystem = littlefs
 board_build.partitions = partitions.csv
 build_flags = -Os
-lib_deps = 
-	arduinogetstarted/ezButton@^1.0.4
+lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/Adafruit SSD1306@^2.5.9
 	adafruit/SdFat - Adafruit Fork@^2.2.3
 	https://github.com/siara-cc/esp32_arduino_sqlite3_lib
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
 	ArduinoJson
+	ESP32 Async UDP
+	https://github.com/devyte/ESPAsyncDNSServer.git
