--- a/website/.env.production
+++ b/website/.env.production
@@ -1,2 +1,2 @@
-PUBLIC_API_URL="http://192.168.0.1/api"
-PUBLIC_WS_URL="ws://192.168.0.1/api/ws"
+PUBLIC_API_URL="http://dtts.local/api"
+PUBLIC_WS_URL="ws://dtts.local/api/ws"
