--- a/website/package.json
+++ b/website/package.json
@@ -37,6 +37,7 @@
 		"bits-ui": "^0.21.7",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.376.1",
+		"svelte-persisted-store": "^0.9.4",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"write-excel-file": "^2.0.1",
